# p-jito-programs

./: .gitignore  Cargo.toml  Makefile  README.md  hardhat.config.ts  package-lock.json  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: ci.yaml
api/: Cargo.toml
api/src/: lib.rs
api/src/router/vaults/: tvl.rs
api/src/state/: metadata.rs  mod.rs  tvl.rs
cli/: Cargo.toml  README.md
cli/src/: cli_args.rs  lib.rs  main.rs  tip_distribution.rs  tip_distribution_handler.rs
clients/rust/: Cargo.toml
clients/rust/restaking_client/: Cargo.toml
clients/rust/src/: lib.rs
clients/rust/vault_client/: Cargo.toml
config/: program.env
contracts/: NoDelegateCall.sol  UniswapV3Factory.sol  UniswapV3Pool.sol  UniswapV3PoolDeployer.sol
contracts/interfaces/: IERC20Minimal.sol  IUniswapV3Factory.sol  IUniswapV3Pool.sol  IUniswapV3PoolDeployer.sol
contracts/interfaces/callback/: IUniswapV3FlashCallback.sol  IUniswapV3MintCallback.sol  IUniswapV3SwapCallback.sol
contracts/interfaces/pool/: IUniswapV3PoolActions.sol  IUniswapV3PoolDetivedState.sol  IUniswapV3PoolEvents.sol  IUniswapV3PoolImmutable.sol  IUniswapV3PoolOwnerActions.sol  IUniswapV3PoolState.sol
contracts/libraries/: BitMath.sol  FixedPoint128.sol  FixedPoint96.sol  FullMath.sol  LiquidityMath.sol  LowGasSafeMath.sol  Oracle.sol  Position.sol  SafeCast.sol  SqrtPriceMath.sol  SwapMath.sol  Tick.sol  TickMath.sol  UnsafeMath.sol
core/: Cargo.toml
core/src/: config.rs  fees.rs  init_bumps.rs  lib.rs  loader.rs  tip_payment_account.rs  transmutable.rs
idl/: jito_tip_payment.json
program/: Cargo.toml
program/src/: change_block_builder.rs  change_tip_receiver.rs  initialize.rs  lib.rs
program/tests/: change_block_builder.rs  change_tip_receiver.rs  initialize_config.rs
program/tests/helpers/: mod.rs
scripts/: generate-clients.js
sdk/: Cargo.toml
sdk/src/: error.rs  instruction.rs  sdk.rs
shank-cli/: Cargo.toml
shank-cli/src/: main.rs
tip-distribution-core/: Cargo.toml
tip-distribution-core/src/: claim_status.rs  config.rs  lib.rs  merkle_root.rs  merkle_root_upload_config.rs  tip_distribution_account.rs
tip-distribution-program/: Cargo.toml
tip-distribution-program/src/: claim.rs  close_claim_status.rs  close_tip_distribution_account.rs  initialize.rs  initialize_merkle_root_upload_config.rs  initialize_tip_distribution_account.rs  lib.rs  migrate_tda_merkle_root_upload_authority.rs  update_config.rs  update_merkle_root_upload_config.rs  upload_merkle_root.rs
tip-distribution-program/tests/: initialize.rs
tip-distribution-sdk/: Cargo.toml
tip-distribution-sdk/src/: error.rs  instruction.rs  lib.rs  sdk.rs
tip-payment-core/: Cargo.toml
tip-payment-core/src/: config.rs  fees.rs  init_bumps.rs  lib.rs
tip-payment-program/: Cargo.toml
tip-payment-program/src/: change_block_builder.rs  change_tip_receiver.rs  initialize.rs  lib.rs
tip-payment-program/tests/: change_block_builder.rs  change_tip_receiver.rs  initialize_config.rs
tip-payment-program/tests/fixtures/: mod.rs
tip-payment-sdk/src/: error.rs  instruction.rs  sdk.rs
vote-state/: Cargo.toml
vote-state/src/: lib.rs
