[workspace]
members = [
    "clients/rust"
,
    "core",
    "program",
    "sdk",
    "shank-cli"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
readme = "README.md"

[workspace.dependencies]
anchor-lang = { version = "0.31.0", features = ["idl-build"] }
anyhow = "1.0.98"
borsh = "1.5.5"
envfile = "0.2.1"
jito-tip-payment-core = { path = "./core", version = "=0.0.1" }
jito-tip-payment-sdk = { path = "./sdk", version = "=0.0.1" }
litesvm = "0.6.1"
num-derive = "0.4.2"
pinocchio = { version = "0.8.4" }
pinocchio-pubkey = "0.2.3"
pinocchio-system = "0.2.3"
shank = { version = "0.4.3-alpha.1", features = ["pinocchio"] }
solana-account = "2.2.0"
solana-account-info = "2.2.0"
solana-client = "2.2.0"
solana-cpi = "2.2.0"
solana-decode-error = "2.2.0"
solana-msg = "2.2.0"
solana-keypair = "2.2.0"
solana-instruction = "2.2.0"
solana-pubkey = "2.2.0"
solana-sdk-ids = "2.2.0"
solana-signer = "2.2.0"
solana-system-interface = "1.0"
solana-program = "2.2.0"
solana-program-entrypoint = "2.2.0"
solana-program-error = "2.2.0"
solana-transaction = "2.2.0"
test-log = "0.2.17"
thiserror = "2.0.12"
env_logger = "0.11.8"
log = "0.4.27"
shank_idl = "0.4.3"
num-traits = "0.2.19"
serde = "1.0.219"
serde_with = "3.14.0"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
