[workspace]
members = [
    "cli",
    "core",
    "tip-distribution-core",
    "tip-distribution-program",
    "tip-distribution-sdk",
    "tip-payment-core",
    "tip-payment-program",
    "tip-payment-sdk",
    "vote-state",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
readme = "README.md"

[workspace.dependencies]
anchor-lang = { version = "0.31.0", features = ["idl-build"] }
anyhow = "1.0.98"
base64 = "0.22.1"
borsh = "1.5.5"
clap = { version = "=4.0", features = ["derive"] }
env_logger = "0.11.8"
envfile = "0.2.1"
jito-tip-core = { path = "core", version = "=0.0.1" }
jito-tip-distribution-core = { path = "tip-distribution-core", version = "=0.0.1" }
jito-tip-distribution-sdk = { path = "tip-distribution-sdk", version = "=0.0.1" }
jito-tip-payment-core = { path = "tip-payment-core", version = "=0.0.1" }
jito-tip-payment-program = { path = "tip-payment-program", version = "=0.0.1" }
jito-tip-payment-sdk = { path = "tip-payment-sdk", version = "=0.0.1" }
jito_tip_distribution-legacy = { package = "jito-tip-distribution", git = "https://github.com/jito-foundation/jito-programs.git" }
jito_tip_distribution_sdk-legacy = { package = "jito-tip-distribution-sdk", git = "https://github.com/jito-foundation/jito-programs.git" }
log = "0.4.27"
num-derive = "0.4.2"
num-traits = "0.2.19"
pinocchio = { version = "0.9.0" }
pinocchio-log = "0.5.0"
pinocchio-pubkey = "0.2.3"
pinocchio-system = "0.3.0"
serde = "1.0.219"
serde_with = "3.14.0"
shank = { version = "0.4.3-alpha.1", features = ["pinocchio"] }
shank_idl = "0.4.3"
solana-account = "2.2.0"
solana-account-decoder = "2.2.0"
solana-account-info = "2.2.0"
solana-client = "2.2.0"
solana-cpi = "2.2.0"
solana-commitment-config = "2.2.0"
solana-decode-error = "2.2.0"
solana-instruction = "2.2.0"
solana-keypair = "2.2.0"
solana-msg = "2.2.0"
solana-native-token = "2.2.0"
solana-program = "2.2.0"
solana-program-entrypoint = "2.2.0"
solana-program-error = "2.2.0"
solana-pubkey = "2.2.0"
solana-sdk = "2.2.0"
solana-sdk-ids = "2.2.0"
solana-signature = "2.2.0"
solana-signer = "2.2.0"
solana-system-interface = "1.0"
solana-program-test = "2.2.0"
solana-transaction = "2.2.0"
tokio = "1.43.0"
thiserror = "2.0.12"
vote-state = { path = "vote-state", version = "0.0.1" }

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
