[package]
name = "restaking-scan"
version = "0.0.3"
edition = "2021"

[[bin]]
name = "jito-restaking-api"
path = "src/bin/main.rs"

[dependencies]
anchor-lang = { workspace = true }
axum = { workspace = true }
borsh = { workspace = true }
clap = { workspace = true }
http = { workspace = true }
jito-bytemuck = { workspace = true }
jito-vault-client = { workspace = true, features = ["serde"] }
jito-vault-core = { workspace = true }
mpl-token-metadata = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-account-decoder = { workspace = true }
solana-program = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-core = { workspace = true }
tracing-subscriber = { workspace = true }
