[package]
name = "jito-programs-cli"
version = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
jito-tip-payment-core = { workspace = true }
jito-tip-payment-program = { workspace = true }
jito-tip-payment-sdk = { workspace = true }
solana-keypair = { workspace = true }
solana-client = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }

[lints]
workspace = true
