[package]
name = "jito-tip-payment-sdk"
version = "0.0.1"
edition = { workspace = true }

[dependencies]
pinocchio = { workspace = true }
shank = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
solana-system-interface = { workspace = true }
thiserror = { workspace = true }
