[package]
name = "jito-tip-distribution-core"
version = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
borsh = { workspace = true }
jito-tip-core = { workspace = true }
jito-tip-distribution-sdk = { workspace = true }
pinocchio = { workspace = true }
pinocchio-log = { workspace = true }
pinocchio-system = { workspace = true }

[lints]
workspace = true
