[package]
name = "jito-tip-distribution-program"
version = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[lib]
crate-type = ["lib", "cdylib"]
name = "jito_tip_distribution_program"

[dependencies]
jito-tip-core = { workspace = true }
jito-tip-distribution-core = { workspace = true }
jito-tip-distribution-sdk = { workspace = true }
pinocchio = { workspace = true }
pinocchio-log = { workspace = true }
pinocchio-pubkey = { workspace = true }
pinocchio-system = { workspace = true }
solana-program = { workspace = true }

[lints]
workspace = true
