[package]
name = "jito-tip-distribution-program"
version = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[lib]
crate-type = ["lib", "cdylib"]
name = "jito_tip_distribution_program"

[dependencies]
borsh = { workspace = true }
jito-tip-core = { workspace = true }
jito-tip-distribution-core = { workspace = true }
jito-tip-distribution-sdk = { workspace = true }
pinocchio = { workspace = true }
pinocchio-log = { workspace = true }
pinocchio-pubkey = { workspace = true }
pinocchio-system = { workspace = true }
solana-program = { workspace = true }
vote-state = { workspace = true }

[dev-dependencies]
solana-commitment-config = { workspace = true }
solana-keypair = { workspace = true }
solana-native-token = { workspace = true }
solana-program-test = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true }
solana-transaction = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
