[package]
name = "jito-tip-payment-program"
version = "0.0.1"
edition = { workspace = true }

[lib]
crate-type = ["lib", "cdylib"]
name = "jito_tip_payment_program"

[dependencies]
jito-tip-core = { workspace = true }
jito-tip-payment-core = { workspace = true }
jito-tip-payment-sdk = { workspace = true }
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
pinocchio-system = { workspace = true }
solana-sdk-ids = { workspace = true }

[dev-dependencies]
solana-commitment-config = { workspace = true }
solana-keypair = { workspace = true }
solana-native-token = { workspace = true }
solana-program-test = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true }
solana-transaction = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
