[package]
name = "jito-tip-payment-client"
description = "Generated client for myproject"
version = { workspace = true }
edition = { workspace = true }

[features]
anchor = []
anchor-idl-build = []
fetch = []
serde = []

[dependencies]
anchor-lang = { workspace = true }
borsh = {workspace = true }
solana-account = { workspace = true }
solana-account-info = { workspace = true }
solana-client = { workspace = true }
solana-cpi = { workspace = true }
solana-decode-error = { workspace = true }
solana-msg = { workspace = true }
solana-instruction = { workspace = true }
solana-program = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
thiserror = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
